@@ -5,12 +5,9 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>483</width>
-    <height>538</height>
+    <width>452</width>
+    <height>485</height>
    </rect>
-  </property>
-  <property name="windowIcon" >
-   <iconset/>
   </property>
   <layout class="QVBoxLayout" >
    <property name="margin" >
@@ -351,6 +348,33 @@
        <property name="spacing" >
         <number>6</number>
        </property>
+       <item row="4" column="2" >
+        <widget class="QLabel" name="label_10" >
+         <property name="text" >
+          <string>KB</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1" >
+        <widget class="QSpinBox" name="cache_cds_spin" >
+         <property name="maximum" >
+          <number>10000</number>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="2" >
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>20</width>
+           <height>351</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
        <item row="3" column="3" >
         <spacer>
          <property name="orientation" >
@@ -458,19 +482,6 @@
          </property>
         </widget>
        </item>
-       <item row="4" column="2" >
-        <spacer>
-         <property name="orientation" >
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" >
-          <size>
-           <width>20</width>
-           <height>351</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
        <item row="1" column="1" >
         <widget class="QSpinBox" name="cache_files_spin" >
          <property name="maximum" >
@@ -484,6 +495,29 @@
           <number>10000</number>
          </property>
         </widget>
+       </item>
+       <item row="4" column="0" >
+        <widget class="QLabel" name="label_9" >
+         <property name="text" >
+          <string>Cache for &amp;audio CDs:</string>
+         </property>
+         <property name="buddy" >
+          <cstring>cache_cds_spin</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="3" >
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>221</width>
+           <height>27</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </widget>
